# floatask

./: .gitignore  README.md  index.html  package-lock.json  package.json
docs/superpowers/specs/: 2026-07-14-floating-task-app-design.md
scripts/: make_gif.py
src/: App.tsx  store.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs
src/components/: Bubble.tsx  Card.tsx  CarryOverDialog.tsx  Header.tsx  QuickAdd.tsx  TaskList.tsx  TaskRow.tsx
src/styles/: components.css  global.css
