[package]
name = "floatask"
version = "0.1.0"
description = "Floatask - floating task manager for macOS"
authors = []
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "floatask"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
